[package]
name = "hammer2-fuse"
version = "0.4.0"
edition = "2021"

[dependencies]
daemonize = "0.5.0"
env_logger = "0.11.7"
fuser = { version = "0.15.1", features = ["abi-7-18"] }
getopts = "0.2.21"
home = "0.5.11"
lazy_static = "1.5.0"
libc = "0.2.171"
libhammer2 = { git = "https://github.com/kusumi/libhammer2" }
log = "0.4.26"
nix = "0.29.0"
simplelog = "0.12.2"
syslog = "7.0.0"
